--- a/WebApplication1/Views/Questions/Update.cshtml
+++ b/WebApplication1/Views/Questions/Update.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Добавления отзыва</title>
+    <title>Изменение отзыва</title>
 </head>
 <body>
     @Scripts.Render("~/bundles/jquery")
@@ -24,7 +24,7 @@
             <hr />
 
             <div class="form-group">
-                <p class = "control-label col-md-2"> Отзыв </p>            
+                <p class="control-label col-md-2"> Отзыв </p>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Question, new { htmlAttributes = new { @class = "form-control" } })
 
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Добавить" class="btn btn-default" />
+                    <input type="submit" value="Сохранить изменения" class="btn btn-default" />
                 </div>
             </div>
         </div>
