--- a/WebApplication1/Views/Questions/Update.cshtml
+++ b/WebApplication1/Views/Questions/Update.cshtml
@@ -19,38 +19,42 @@
     @using (Html.BeginForm())
     {
 
-        <div class="form-horizontal">
-            <h4>Пожалуйста, заполните все поля</h4>
-            <hr />
+    <div class="form-horizontal">
+        <h4>Пожалуйста, заполните все поля</h4>
+        <hr />
 
-            <div class="form-group">
-                <p class="control-label col-md-2"> Отзыв </p>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Question, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            <p class="control-label col-md-2"> Отзыв </p>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Question, new { htmlAttributes = new { @class = "form-control" } })
 
-                </div>
-            </div>
-
-            <div class="form-group">
-                <p class="control-label col-md-2"> Имя пользователя </p>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <p class="control-label col-md-2"> Электронная почта </p>
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UserMail, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Сохранить изменения" class="btn btn-default" />
-                </div>
             </div>
         </div>
+
+        <div class="form-group">
+            <p class="control-label col-md-2"> Имя пользователя </p>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <p class="control-label col-md-2"> Электронная почта </p>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserMail, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        
+        <div hidden>
+            @Html.EditorFor(model => model.TimeQuestion)
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Сохранить изменения" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
     }
 
     <div>
