--- a/MVCAPI/Views/Home/Index.cshtml
+++ b/MVCAPI/Views/Home/Index.cshtml
@@ -1,31 +1,75 @@
-﻿
-<div id="result">
+﻿<div>
 
+    <button id="btnLoad">
+        Отзывы
+    </button>
 </div>
-<button id="btnLoad">
-    Load
-</button>
 
+<div id="results"></div>
 
 <script src="~/Scripts/jquery-3.3.1.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-    $(function () {
-        $("#btnLoad").click(function () {
-            /*$.ajax({
-                type: 'GET',
-                url: '/api/Values',
-                // data: { get_param: 'value' },
-                dataType: 'json',
-                success: function (data) {
-                    $.each(data, function (index, element) {
-                        $('#result').append(element.Name + "<br/>");
-                    });
-                }
-            });*/
-            $('#result').html("");
-            $('#result').append('HELLO!');
 
+
+    <script type="text/javascript">
+        $(function () {
+
+            $("#btnLoad").click(function () {
+
+
+                $.ajax({
+                    type: 'GET',
+                    url: 'http://localhost:12404/API/Values',
+                    // data: { get_param: 'value' },
+                    dataType: 'json',
+                    success: function (RepQ) {
+                        $.each(RepQ, function (index, element) {
+                            $('#results').append("<p>" + element.TimeQuestion + "  " + element.Question + "</p>");
+                        });
+
+                    }
+                });
+
+            });
         });
-    });
+    </script>
 
-</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    @*<div id="result">
+
+        </div>
+        <button id="btnGetAll">
+            Load
+        </button>
+
+
+        <script src="~/Scripts/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(function () {
+                $("#btnLoad").click(function () {
+                    $('#result').html("");
+                    $('#result').append('HELLO!');
+
+                });
+            });
+
+        </script>*@
