--- a/WebApplication1/Views/Questions/Index.cshtml
+++ b/WebApplication1/Views/Questions/Index.cshtml
@@ -13,9 +13,9 @@
 <body>
     <p> </p>
     <div class="form-group">
-        <p class="btn btn-default">
-            @Html.ActionLink("Добавить отзыв", "Create")
-        </p>
+ 
+            @Html.ActionLink("Добавить отзыв", "Create",null, new { @class="btn btn-default"} )
+        
     </div>
 
 
