--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Отзывы", "Index", "Questions")</li>
                     <li>@Html.ActionLink("Ответы", "Index", "Answers")</li>
+                    <li>@Html.ActionLink("API Отзывы", "Index", "ApiMain")</li>
                 </ul>
             </div>
         </div>
